fixed mapper struct